fixed social icon alignment

--- a/nicolai.ruckel.de/themes/nicolai/static/css/style.css
+++ b/nicolai.ruckel.de/themes/nicolai/static/css/style.css
@@ -166,6 +166,7 @@ nav ul li {
 .social img {
   height: 1.2em;
   width: auto;
+  vertical-align: middle;
 }
 
 .recent ul {
